--- a/index.html
+++ b/index.html
@@ -1,16 +1,75 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1" />
-  <title>Vite + React</title>
-</head>
+    <!-- SEO Title -->
+    <title>Сравните таксопарки Казахстана — Лучшие условия для водителей</title>
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
+    <!-- SEO Description -->
+    <meta
+      name="description"
+      content="Выберите лучший таксопарк в Казахстане! Сравните условия работы, комиссии и бонусы. Проходите регистрацию онлайн в Алматы, Астане, Шымкенте, Караганде, Актобе, Костанае, Павлодаре и других регионах. Начните зарабатывать уже сегодня!"
+    />
 
+    <!-- SEO Keywords -->
+    <meta
+      name="keywords"
+      content="таксопарк Казахстан, сравнить таксопарки, регистрация в таксопарке, лучшие условия для водителей, такси Алматы, такси Астана, такси Шымкент, такси Караганда, такси Актобе, такси Актау, такси Атырау, такси Костанай, такси Павлодар, такси Усть-Каменогорск, такси Кокшетау, такси Тараз, такси Темиртау, такси Туркестан, такси Кызылорда, такси Уральск, такси Петропавловск, такси Жезказган, работа в такси, комиссии таксопарков, бонусы для водителей, такси Казахстан, работа водителем"
+    />
+
+    <!-- Open Graph (OG) - Для соцсетей -->
+    <meta
+      property="og:title"
+      content="Сравните таксопарки Казахстана — Лучшие условия для водителей"
+    />
+    <meta
+      property="og:description"
+      content="Выберите лучший таксопарк в Казахстане! Сравните условия работы, комиссии и бонусы. Проходите регистрацию онлайн в Алматы, Астане, Шымкенте, Караганде, Актобе, Костанае, Павлодаре и других регионах. Начните зарабатывать уже сегодня!"
+    />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://yourwebsite.com" />
+
+    <style>
+      .seo-text {
+        position: absolute;
+        left: -9999px;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+        opacity: 0;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div id="root">
+      <div class="seo-text">
+        <h1>Сравните таксопарки Казахстана — Лучшие условия для водителей</h1>
+        <p>
+          Выберите лучший таксопарк в Казахстане! Сравните условия работы,
+          комиссии и бонусы. Проходите регистрацию онлайн в Алматы, Астане,
+          Шымкенте, Караганде, Актобе, Костанае, Павлодаре и других регионах.
+          Начните зарабатывать уже сегодня!
+        </p>
+        <ul>
+          <li>Регистрация водителей в Казахстане</li>
+          <li>Актуальные комиссии таксопарков</li>
+          <li>Бонусы и привилегии для водителей</li>
+          <li>Работа в такси в крупнейших городах</li>
+        </ul>
+      </div>
+    </div>
+
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
