--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1"
     />
+    <meta name="google-site-verification" content="8MWry9wT14zkOK40jOGoo3A0hvNTc_OS12Sb7ASKbT4" />
 
     <!-- SEO Title -->
     <title>Сравните таксопарки Казахстана — Лучшие условия для водителей</title>
