--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1"
     />
     <meta name="google-site-verification" content="8MWry9wT14zkOK40jOGoo3A0hvNTc_OS12Sb7ASKbT4" />
+    <meta name="yandex-verification" content="7641a9100e1316d3" />
 
     <!-- SEO Title -->
     <title>Сравните таксопарки Казахстана — Лучшие условия для водителей</title>
@@ -15,7 +16,7 @@
     <!-- SEO Description -->
     <meta
       name="description"
-      content="Выберите лучший таксопарк в Казахстане! Сравните условия работы, комиссии и бонусы. Проходите регистрацию онлайн в Алматы, Астане, Шымкенте, Караганде, Актобе, Костанае, Павлодаре и других регионах. Начните зарабатывать уже сегодня!"
+      content="Сравните таксопарки Казахстана. Выберите лучший таксопарк в Казахстане! Сравните условия работы, комиссии и бонусы. Проходите регистрацию онлайн в Алматы, Астане, Шымкенте, Караганде, Актобе, Костанае, Павлодаре и других регионах. Начните зарабатывать уже сегодня!"
     />
 
     <!-- SEO Keywords -->
